@@ -280,10 +280,13 @@ public:
     // Returned value : true if pagebreak was modified, false otherwise
     // Usage : while (container->AdjustPagebreak(&p)) {}
     virtual bool AdjustPagebreak(int *pagebreak,
-                                 const wxArrayInt& known_pagebreaks) const;
+                                 const wxArrayInt& known_pagebreaks,
+                                 int pageHeight) const;
 
     // Sets cell's behaviour on pagebreaks (see AdjustPagebreak). Default
     // is true - the cell can be split on two pages
+    // If there is no way to fit a cell in the current page size, the cell
+    // is always split, ignoring this setting.
     void SetCanLiveOnPagebreak(bool can) { m_CanLiveOnPagebreak = can; }
 
     // Can the line be broken before this cell?
@@ -439,8 +442,10 @@ public:
                       wxHtmlRenderingInfo& info);
     virtual void DrawInvisible(wxDC& dc, int x, int y,
                                wxHtmlRenderingInfo& info);
-/*    virtual bool AdjustPagebreak(int *pagebreak, int *known_pagebreaks = NULL, int number_of_pages = 0) const;*/
-    virtual bool AdjustPagebreak(int *pagebreak, const wxArrayInt& known_pagebreaks) const;
+
+    virtual bool AdjustPagebreak(int *pagebreak,
+                                 const wxArrayInt& known_pagebreaks,
+                                 int pageHeight) const;
 
     // insert cell at the end of m_Cells list
     void InsertCell(wxHtmlCell *cell);
